--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,3 @@
 .idea
-out
-build
 target
-test.feature
-debugging.feature
-s-test-certs-044.img
-project44.iml
-/src/test/resources/config/auctionCancellation.xml
-/src/test/resources/config/changesInEA.xml
-/src/test/resources/config/callForQuotes.xml
-/src/test/resources/config/offersRequest.xml
-/src/test/resources/config/openCompetition.xml
-/src/test/resources/config/openCompetitionLP.xml
-/src/test/resources/config/modificationOffersRequest.xml
-/src/test/resources/config/twoStageCompetition.xml
-/src/test/resources/config/modificationCfQ.xml
+myshopru.iml
